batman-adv-kernelland (0.1-2) unstable; urgency=low

  * Split batman-adv source package in batman-adv-kernelland and battool
    to match with upstream released tar.gz
  * Install README with usage instructions
  * Make bzip2 an arch independent dependency for module source creation
  * Remove toplevel stamps with dh_clean (>=7)
  * Change upstream url to http://www.open-mesh.net/

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Fri, 02 Jan 2009 14:20:44 +0100

batman-adv (0.1-1) unstable; urgency=low

  * New upstream release
  * Install upstream changelog for batman-adv-source

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Sun, 28 Dec 2008 12:37:37 +0100

batman-adv (0.1~beta+svn1154-1) unstable; urgency=low

  * Support changed directory layout in upstream
  * Correct name of battool package in debian/Readme.DEBIAN
  * Fix installation of the renamed kernel module
  * Replace batman-adv@packages.debian.org maintainer with first Uploader in
    debian/control

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Mon, 17 Nov 2008 11:28:35 +0100

batman-adv (0.1~beta+svn1141-1) unstable; urgency=low

  * Update to upstream revision 1141
  * debian/copyright:
    - Add Andreas Langer who has also copyright to battool/*
    - Set copyright of debian/* to Simon Wunderlich and myself

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Sun, 26 Oct 2008 09:42:25 +0100

batman-adv (0.1~beta+svn1105-3) unstable; urgency=low

  * reuse orig.tar.gz from 0.1~beta+svn1105-1 release

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Sun, 14 Sep 2008 14:24:34 +0200

batman-adv (0.1~beta+svn1105-2) unstable; urgency=low

  * remove useless dh_install* and dh_shlibdeps -i from rules
  * move maintainer to uploaders field in control for multiple maintainers
  * add debian watch file for uscan/dehs

 -- Sven Eckelmann <sven.eckelmann@gmx.de>  Sat, 13 Sep 2008 01:19:11 +0200

batman-adv (0.1~beta+svn1105-1) unstable; urgency=low

  * update to upstream revision 1105 (various fixes)
